tests/snapshots/render_snapshots__inspector__inspector_indexes_tab_with_data.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││Name              Columns   Type    Unique                │
│  public.comments ││users_pkey        id        btree   ✓                     │
│                  ││idx_users_email   email     btree   ✓                     │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  │└──────────────────────────────────────────────────────────┘
│                  │┌ [3] Result ──────────────────────────────────────────────┐
│                  ││(select a table to preview)                               │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
r:Reload  s:SQL  e:ER Diagram  ^P:Tables  ^R:Read-Only  f:Focus  Tab/⇧Tab:InsTab
